# data-access-api/open-api-specification.yml
@@ -21,8 +21,8 @@ paths:
     $ref: "./open-api-applications/resources.yml#/paths/~1api~1v0~1applications~1{id}~1history-search"
   /api/v0/applications/{id}/decision:
     $ref: "./open-api-applications/resources.yml#/paths/~1api~1v0~1applications~1{id}~1decision"
-  /api/v0/applications/{id}/ready:
-    $ref: "./open-api-applications/resources.yml#/paths/~1api~1v0~1applications~1{id}~1ready"
+  /api/v0/applications/{id}/auto-grant-outcome:
+    $ref: "./open-api-applications/resources.yml#/paths/~1api~1v0~1applications~1{id}~1auto-grant-outcome"
   /api/v0/applications/{id}/certificate:
     $ref: "./open-api-applications/resources.yml#/paths/~1api~1v0~1applications~1{id}~1certificate"
   /api/v0/individuals:
@@ -69,8 +69,8 @@ components:
       $ref: "./open-api-common/components.yml#/components/schemas/PagingResponse"
     MakeDecisionRequest:
       $ref: "./open-api-applications/components.yml#/components/schemas/MakeDecisionRequest"
-    ReadyApplicationRequest:
-      $ref: "./open-api-applications/components.yml#/components/schemas/ReadyApplicationRequest"
+    AutoGrantOutcomeRequest:
+      $ref: "./open-api-applications/components.yml#/components/schemas/AutoGrantOutcomeRequest"
     IndividualResponse:
       $ref: "./open-api-individuals/components.yml#/components/schemas/IndividualResponse"
     IndividualsResponse:
